# taktik-back

./: Cargo.toml  readme.md  test.db
.github/workflows/: greetings.yml
migrations/2023-10-04-095216_create_posts/: down.sql  up.sql
src/: main.rs
src/articales/: controller.rs  mod.rs  mod.test.rs
src/catalog/: controller.rs  mod.rs
src/db/: mod.rs  schema.rs
src/models/: artical.rs  mod.rs  posts.rs  prelude.rs  service.rs  services.rs  user.rs
src/routers/: mod.rs
src/services/: controller.rs  dto.rs  mod.rs  service.rs
src/shared/: crud.rs  mod.rs
src/site/: controller.rs  mod.rs
src/users/: controller.rs  dto.rs  mod.rs  service.rs
