[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-limitation = "0.4.0"
actix-multipart = "0.6.0"
actix-web = "4"
chrono = "0.4.31"
dotenv = "0.15.0"
dotenvy = "0.15"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
# libsqlite3-sys = { version = "0.26.0" , features = ["bundled"]}
serde = "1.0.188"
serde_json = "1.0.105"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = "1.32.0"
openssl-sys = "0.9.93"
